--- a/polymarkets_react_app/public/index.html
+++ b/polymarkets_react_app/public/index.html
@@ -19,6 +19,8 @@
     <!-- Include Theme CSS -->
      <link rel="stylesheet" href="%PUBLIC_URL%/css/main.css" />
      <link rel="stylesheet" href="%PUBLIC_URL%/css/utility.css" />
+
+     <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
